edited the website title.

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <html style='font-size:20px;'>
     <head>
-        <title>flashcard test</title>
+        <title>add flashcards to cs-refresh</title>
     </head>
     <body>
         <form action="/logout" method="get">
