--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,9 @@
         <form action="/logout" method="get">
             <input type="submit" value="logout"/>
         </form>
+        <form action="/quizlet" method="get">
+            <input type="submit" value="pull cards from quizlet"/>
+        </form>
         {% if Inserted %}
         <form
             style ='display:flex;flex-direction:column;justify-content:space-around;height:50%; width: 50%;align-self:center;margin-left:auto;margin-right:auto;margin-top:100px;margin-bottom:auto;min-width:500px;max-width:900px;'
